--- a/comicanimation.html
+++ b/comicanimation.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Given 被贈與的未來</title>
 
-  <!-- favicon 與 manifest 設定 -->
+  <!-- favicon -->
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="shortcut icon" href="favicon.ico">
@@ -70,7 +70,7 @@
   </div>
 
 
-  <!-- JavaScript -->
+  <!-- JS -->
   <script src="js/hamburger.js"></script>
   <script src="js/common.js"></script>
   <script src="js/loading.js"></script>
