--- a/bandprofile.html
+++ b/bandprofile.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Given 被贈與的未來</title>
 
-  <!-- favicon 與 manifest 設定 -->
-  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Given" />
-  <link rel="manifest" href="site.webmanifest" />
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Given">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- 字體與樣式 -->
-  <link rel="stylesheet" href="css/bandprofile.css" />
+  <link rel="stylesheet" href="css/bandprofile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Zen+Kurenaido&display=swap" rel="stylesheet">
@@ -62,10 +62,10 @@
 
   <div class="wrapper">
     <a href="bandprofilegiven.html" class="image-block left-block">
-      <img src="image/given.jpg" alt="成員介紹 1" />
+      <img src="image/given.jpg" alt="given">
     </a>
     <a href="bandprofilesyh.html" class="image-block right-block">
-      <img src="image/syh.jpg" alt="成員介紹 2" />
+      <img src="image/syh.jpg" alt="syh">
     </a>
   </div>
 
