--- a/bandprofile.html
+++ b/bandprofile.html
@@ -55,6 +55,7 @@
           <li><a href="comicanimation.html">漫畫/動畫</a></li>
           <li><a href="bandprofile.html">樂團介紹</a></li>
           <li><a href="author.html">作者帳號</a></li>
+          <li><a href="vote.html">角色投票</a></li>
         </ul>
       </li>
     </ul>
