--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li><a href="comicanimation.html">漫畫/動畫</a></li>
           <li><a href="bandprofile.html">樂團介紹</a></li>
           <li><a href="author.html">作者帳號</a></li>
+          <li><a href="vote.html">角色投票</a></li>
         </ul>
       </li>
     </ul>
@@ -106,6 +107,10 @@
         <div class="circle-item">
           <a href="author.html" class="circle-link"><div class="circle"><img src="image/icon5.jpg" alt="作者" /></div></a>
           <p>作者帳號</p>
+        </div>
+        <div class="circle-item">
+          <a href="vote.html" class="circle-link"><div class="circle"><img src="image/icon6.jpg" alt="投票" /></div></a>
+          <p>角色投票</p>
         </div>
       </div>
     </div>
