vote+css change

--- a/vote.html
+++ b/vote.html
@@ -73,29 +73,26 @@
         </div>
     </div>
 
-    <!-- 頁面標題和介紹 -->
     <header>
         <h1>角色人氣投票</h1>
         <p>為最喜歡的角色投票!</p>
     </header>
 
-    <!-- 投票容器 -->
     <main class="voting-container">
     </main>
 
-    <!-- 投票結果展示 -->
     <div class="result-display">
         <h2>🗳️ 投票結果</h2>
         <div id="results-list">
         </div>
     </div>
 
-    <!-- 頁腳 -->
+    <!-- footer -->
     <footer>
         <p>失われたものすべてが新たな救済を見つけられますように。</p>
     </footer>
 
-    <!-- 外部腳本 -->
+    <!-- JS -->
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
     <script src="js/vote.js"></script>
