--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Given 被贈與的未來</title>
+  
+  <!-- 預加載背景圖片 -->
+  <link rel="preload" href="image/first page.jpg" as="image">
+  <link rel="preload" href="image/given-story.png" as="image">
+  <link rel="preload" href="image/mainpage3tablet.jpg" as="image">
 
   <!-- favicon -->
   <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
