--- a/vote.html
+++ b/vote.html
@@ -53,12 +53,12 @@
             <li class="has-submenu">
                 <a href="#" class="submenu-toggle">功能導覽</a>
                 <ul class="submenu">
-                    <li><a href="character.html">登場角色</a></li>
-                    <li><a href="song.html">歌曲</a></li>
-                    <li><a href="comicanimation.html">漫畫/動畫</a></li>
-                    <li><a href="bandprofile.html">樂團介紹</a></li>
-                    <li><a href="author.html">作者帳號</a></li>
-                    <li><a href="vote.html">角色投票</a></li>
+                    <li><a href="character.html" class="sidebar-link">登場角色</a></li>
+                    <li><a href="song.html" class="sidebar-link">歌曲</a></li>
+                    <li><a href="comicanimation.html" class="sidebar-link">漫畫/動畫</a></li>
+                    <li><a href="bandprofile.html" class="sidebar-link">樂團介紹</a></li>
+                    <li><a href="author.html" class="sidebar-link">作者帳號</a></li>
+                    <li><a href="vote.html" class="sidebar-link">角色投票</a></li>
                 </ul>
             </li>
         </ul>
@@ -99,6 +99,6 @@
     <script src="js/hamburger.js"></script>
     <script src="js/common.js"></script>
     <script src="js/loading.js"></script>
-
+    <div id="page-transition"></div>
 </body>
 </html>
