--- a/song.html
+++ b/song.html
@@ -122,7 +122,7 @@
         <img src="image/song8.jpg" alt="スーパーウルトラ I LOVE YOU">
       </div>
 
-      <div class="song-circle" data-video="https://www.youtube.com/embed/AhRjN_4ApuU?autoplay=1" data-bg-desktop="image/song9tablet.jpg" data-bg-mobile="image/song9phone.jpg">
+      <div class="song-circle" data-video="https://youtu.be/yXr4cAGslwI?si=7uYM8M4_6-ZcVW7y" data-bg-desktop="image/song9tablet.jpg" data-bg-mobile="image/song9phone.jpg">
         <img src="image/song9.jpg" alt="海へ">
       </div>
 
