character p color change

--- a/bandprofilesyh.html
+++ b/bandprofilesyh.html
@@ -55,7 +55,7 @@
       <h1><strong>syh</strong></h1>
       <p><strong>團名由來：</strong>團名是由原先的三位成員:八木玄純(<strong>S</strong>hizusumi)、吉田由紀(<strong>Y</strong>uki)、鹿島柊(<strong>H</strong>iragi)的英文首字組成。由紀死後柊跟玄純繼續用著syh的團名，在前一位代打吉他手合作結束後便邀請立夏來當他們的代打吉他手。如今十年過去立夏依舊是syh的代打吉他手。</p>
       <p><strong>團員：</strong>
-        <a href="haruki.html">鹿島柊</a>、<a href="akihiko.html">八木玄純</a>、<a href="ritsuka.html">吉田由紀</a>
+        <a href="character6.html">鹿島柊</a>、<a href="character5.html">八木玄純</a>、<a href="character8.html">吉田由紀</a>
       </p>
       <p><strong>劇中歌曲：</strong>
         <a href="https://youtu.be/PeNGASaGlZU?si=2MMvxPvpi7oq4v0Z" target="_blank">パレイド</a>、
